# fit-par

./: .gitignore  CMakeLists.txt  README.md  misc.c  misc.h  prepare.sh  set.c  set.h  set_next.c  set_next.h  sop-mpi.c  sop-mpi.h  sop.c  sop.h  stack.c  stack.h
test/: test1  test10  test2  test3  test4  test5  test6  test7  test8  test9
